# webring

./: .dockerignore  .env  .gitattributes  .gitignore  CHANGES.md  Dockerfile  LICENSE  README.md  docker-compose.yml  get-requirements.py  pyproject.toml  run-app.sh  wsgi.py
db/: dummy_db.py  env.py  seeds.py
db/versions/: 2eecc6cd2574_remove_rottedlinks_model.py  7e3df200a38d_remove_rotted_column.py  7e8b5103e0a0_add_uuid_column.py  bc15afca58dd_create_linkrothistory_model.py  c41abb284c8f_add_is_dead_is_web_archive.py  d22f2e10a5a3_make_pk_an_int.py
scripts/: make_database.py
secrets/: api.json
src/: app_factory.py  blueprints.py  logger.py
src/core/: auth.py  auth_helpers.py  logger.py
src/core/database/: __init__.py  bitrot.py  linkrot.py  meta.py  schema.py  weblink.py
src/core/models/: AuthKey.py  BitRot.py  Empty.py  Generic.py  HttpError.py  RotResult.py  RotStates.py  WebLink.py  __init__.py  rot_result.py
src/templates/: webring-embed.js
src/views/: bitrot.py  embed.py  linkrot.py  root.py
tests/: conftest.py  helpers.py  test_auth.py  test_linkrot.py  test_root.py
tests/secrets/: AUTH_KEYS  api.json
