[tool.poetry]
name = "Webring"
version = "1.2.1"
description = "Because everything on the Web eventually loops back onto itself."
authors = ["Caleb <le717@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
flask-smorest = "^0.44.0"
sys-vars = "^5.0.0"
gunicorn = "^22.0.0"
sqlalchemy = "^1.4.44"
flask-sqlalchemy = "^3.0.2"
flask-cors = "^4.0.1"
flask-db = "^0.4.1"
httpx = "^0.27.0"

[tool.poetry.group.dev]

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^8.2.2"
ruff = "^0.4.8"
types-flask-cors = "^4.0.0.20240523"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
[[tool.mypy.overrides]]
module = ["flask_smorest", "sys_vars", "sqlalchemy"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

[tool.ruff.format]
preview = true
indent-style = "space"
quote-style = "double"
