[tool.poetry]
name = "Webring"
version = "1.2.1"
description = "Because everything on the Web eventually loops back onto itself."
authors = ["Caleb <le717@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
flask-smorest = "^0.44.0"
sys-vars = "^5.0.0"
gunicorn = "^22.0.0"
sqlalchemy = "2.0.30"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.1"
flask-db = "^0.4.1"
httpx = "^0.27.0"

[tool.poetry.group.dev]

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^8.2.2"
ruff = "^0.4.8"
types-flask-cors = "^4.0.0.20240523"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
[[tool.mypy.overrides]]
module = ["flask_smorest", "sys_vars", "sqlalchemy"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

[tool.ruff.lint]
preview = true

select = [
  "A",    # flake8-builtins
  "ARG",  # flake8-unused-arguments
  "BLE",  # flake8-blind-except
  "C4",   # flake8-comprehensions
  "C90",  # mccabe
  "DTZ",  # flake8-datetimez
  "ERA",  # eradicate
  "FIX",  # flake8-fixme
  "FLY",  # flynt
  "FURB", # refurb
  "I",    # isort
  "LOG",  # flake8-logging
  "G",    # flake8-logging-format
  "PERF", # Perflint
  "PIE",  # flake8-pie
  "PTH",  # flake8-use-pathlib
  "RET",  # flake8-return
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "TD",   # flake8-todos
  "UP",   # pyupgrade
]

[tool.ruff.format]
preview = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10
