[tool.poetry]
name = "Webring"
version = "2.0.0a1"
description = "Because everything on the Web eventually loops back onto itself."
authors = ["Caleb <le717@users.noreply.github.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
flask-smorest = "^0.44.0"
sys-vars = {version = "^5.1.0", extras = ["dotenv"]}
gunicorn = "^22.0.0"
sqlalchemy = "2.0.30"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.1"
flask-db = "^0.4.1"
httpx = "^0.27.0"

[tool.poetry.group.dev]

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^8.2.2"
ruff = "^0.4.8"
types-flask-cors = "^4.0.0.20240523"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
[[tool.mypy.overrides]]
module = ["flask_smorest", "sys_vars", "sqlalchemy"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
preview = true

ignore = [
  "COM812",  #missing-trailing-comma
  "PLR6301", # no-self-use
  "PLR1711", # useless-return
  "RET501",  # unnecessary-return-none
  "TD002",   # missing-todo-author
  "TD003",   # missing-todo-link
]

select = [
  "A",    # flake8-builtins
  "ARG",  # flake8-unused-arguments
  "BLE",  # flake8-blind-except
  "C4",   # flake8-comprehensions
  "C90",  # mccabe
  "COM",  # flake8-commas
  "DTZ",  # flake8-datetimez
  "EM",   # flake8-errmsg
  "ERA",  # eradicate
  "F",    # pyflakes
  "FIX",  # flake8-fixme
  "FLY",  # flynt
  "FURB", # refurb
  "I",    # isort
  "LOG",  # flake8-logging
  "G",    # flake8-logging-format
  "PERF", # Perflint
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "RET",  # flake8-return
  "RUF",  # Ruff-specific rules
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "TD",   # flake8-todos
  "UP",   # pyupgrade
]

[tool.ruff.format]
preview = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
lines-after-imports = 2
extra-standard-library = ["zoneinfo"]
